--- a/Views/Home/About.cshtml
+++ b/Views/Home/About.cshtml
@@ -9,15 +9,18 @@
 
 <article>
     <p>
-        Use this area to provide additional information.
+        Use this www to provide additional information.
     </p>
 
     <p>
-        Use this area to provide additional information.
+        Use this eee to provide additional information.
     </p>
 
     <p>
-        Use this area to provide additional information.
+        Use this arcea to provide additional information.
+		<br/> new line
+		test 3
+	    555
     </p>
 </article>
 
