--- a/Views/Home/About.cshtml
+++ b/Views/Home/About.cshtml
@@ -17,7 +17,7 @@
     </p>
 
     <p>
-        Use this arcea to provide additional information.
+        Use this arceddddda to provide additional information.
     </p>
 </article>
 
